[package]
name = "chaindev"
version = "0.14.3"
edition = "2021"
authors = ["hui.fan@mail.ru"]
description = "Powerful development and testing utils for blockchain developers."
homepage = "https://github.com/rust-util-collections/chaindev"
repository = "https://github.com/rust-util-collections/chaindev"
keywords = ["blockchain", "tendermint", "substrate", "development"]
license = "GPL-3.0"

# build = "build.rs"

[dependencies]
nix = "0.26.1"
toml_edit = "0.19.6"
rand = "0.8.5"
once_cell = "1.17.0"
parking_lot = "0.12.1"

serde_json = "1.0.89"
serde = { version = "1.0.148", features = ["derive"] }

ruc = { version = "4.1.0", features = ["cmd","ssh"] }

vsdb = { version = "0.56.1", default-features = false }

tendermint = { version = "0.29.1", optional = true }
tendermint-config = { version = "0.29.1", optional = true }

[features]
default = ["tendermint_based","vsdb_rocks_engine","vsdb_bcs_codec","vsdb_compress"]

substrate_based = []
tendermint_based = ["tendermint","tendermint-config"]

vsdb_rocks_engine = ["vsdb/rocks_engine"]
vsdb_sled_engine = ["vsdb/sled_engine"]

vsdb_bcs_codec = ["vsdb/bcs_codec"]
vsdb_json_codec = ["vsdb/json_codec"]
vsdb_msgpack_codec = ["vsdb/msgpack_codec"]

vsdb_compress = ["vsdb/compress"]

[patch.crates-io]
# vsdb = { path = "../vsdb/wrappers" }
