[package]
name = "chaindev"
version = "0.33.0"
edition = "2021"
authors = ["hui.fan@mail.ru"]
description = "Powerful development and testing utils for blockchain developers."
homepage = "https://github.com/rust-util-collections/chaindev"
repository = "https://github.com/rust-util-collections/chaindev"
keywords = ["blockchain", "tendermint", "substrate", "development"]
license = "GPL-3.0"

# build = "build.rs"

[dependencies]
nix = { version = "0.29", features = [ "net", "process", "user", "hostname" ] }
rand = "0.8"
parking_lot = "0.12"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_yml = "0.0.12"

ruc = { version = "6.1.0", features = [ "cmd", "ssh" ] }
vsdb = { version = "1.0.2", default-features = false }

tendermint = { version = "0.37", optional = true }
tendermint-config = { version = "0.39", optional = true }

toml_edit = { version = "0.22", optional = true }

[features]
default = [
    "beacon_based",
    "tendermint_based",
]

beacon_based = [ "vsdb_prelude" ]

tendermint_based = [
    "vsdb_prelude",
    "tendermint",
    "tendermint-config",
    "toml_edit"
]

vsdb_prelude = [
    "vsdb_msgpack_codec",
    "vsdb_compress",
    "vsdb_rocks_backend"
]

vsdb_rocks_backend = [ "vsdb/rocks_backend" ]
vsdb_compress = [ "vsdb/compress" ]
vsdb_msgpack_codec = [ "vsdb/msgpack_codec" ]

[patch.crates-io]
# ruc = { path = "../ruc" }
# vsdb = { path = "../vsdb/wrappers" }
