[package]
name = "chaindev"
version = "0.45.2"
edition = "2021"
authors = ["hui.fan@mail.ru"]
description = "Powerful development and testing utils for blockchain developers."
homepage = "https://github.com/rust-util-collections/chaindev"
repository = "https://github.com/rust-util-collections/chaindev"
keywords = ["blockchain", "tendermint", "substrate", "development"]
license = "GPL-3.0"

# build = "build.rs"

[package.metadata.docs.rs]
features = [ "beacon_based" ]

[dependencies]
nix = { version = "0.29", features = [ "net", "process", "user", "hostname" ] }
rand = "0.8"
parking_lot = "0.12"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_yml = "0.0.12"

ruc = { version = "7.7.0", features = [ "cmd", "ssh" ] }
vsdb = { version = "3.0.0", default-features = false }

tendermint = { version = "0.37", optional = true }
tendermint-config = { version = "0.37", optional = true }
toml_edit = { version = "0.22", optional = true }

[features]
default = [ "beacon_based", "tendermint_based" ]

beacon_based = [ "vsdb_prelude" ]

tendermint_based = [
    "vsdb_prelude",
    "tendermint",
    "tendermint-config",
    "toml_edit"
]

vsdb_prelude = [
    "vsdb/parity_backend",
    "vsdb/msgpack_codec",
    "vsdb/compress"
]

[patch.crates-io]
# ruc = { path = "../ruc" }
# vsdb = { path = "../vsdb/wrappers" }
